--- a/YRGallery/package.json
+++ b/YRGallery/package.json
@@ -14,10 +14,14 @@
     "expo": "~38.0.8",
     "expo-linking": "latest",
     "expo-status-bar": "^1.0.2",
+    "i": "^0.3.6",
+    "rea": "0.0.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-axios": "^0.17.1",
+    "react-native-dark-mode": "^0.2.2",
+    "react-native-dynamic": "^1.0.0-rc.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
